feat(calendars): Use tom-select for Partner filter
Makes the Partner filter searchable for easier selection from the
large list of partners.

--- a/app/views/admin/calendars/index.html.erb
+++ b/app/views/admin/calendars/index.html.erb
@@ -75,6 +75,8 @@
       {
         column: 'partner',
         label: 'Partner',
+        tom_select: true,
+        width: 'w-48',
         options: partner_options
       },
       {
