style(users): Move admin type filters to secondary row
Use secondary_filters to place Site Admin, Neighbourhood Admin, and
Partner Admin filters on a separate line below the search and Role
filter. Also update datatable partial to support radio filters in
the secondary filters row.

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -27,7 +27,9 @@
           { value: 'editor', label: 'Editor' },
           { value: 'citizen', label: 'Citizen' }
         ]
-      },
+      }
+    ],
+    secondary_filters: [
       {
         type: :radio,
         column: 'is_site_admin',
