--- a/app/views/admin/articles/_form_tab_image.html.erb
+++ b/app/views/admin/articles/_form_tab_image.html.erb
@@ -4,8 +4,8 @@
   <%= render Admin::ImageUploadComponent.new(
     form: f,
     attribute: :article_image,
-    title: "Article Image",
-    description: "This image will appear at the top of the article and in social media previews.",
+    title: t('admin.articles.image.title'),
+    description: t('admin.articles.image.description'),
     aspect: '16:9',
     disabled: disabled_fields.include?(:article_image)
   ) %>
